--- a/api/.env
+++ b/api/.env
@@ -1,7 +1,7 @@
 PORT = 3003
 
-#MONGO_URI=mongodb+srv://<username>:<password>@127.0.0.1/database?retryWrites=true&w=majority
-MONGO_URI=mongodb://127.0.0.1:27017/database
+MONGO_URI=mongodb://localhost:27017/database
+
 SECRET_KEY = e1G9ebN25fyKoWPo3vteSOo2qR74knf1
 
 SERVER_URL=https://api.vietcredit88.com/
